--- a/index.html
+++ b/index.html
@@ -22,7 +22,21 @@
 </head>
 <body class="font-roboto-regular">
     <header class="bg-[#FFFBF0] p-5 md:p-10">
-        <nav></nav>
+        <nav class="flex justify-between items-center mb-10">
+            <div class="md:w-1/3 w-1/2"><a href=""><img src="./images/icons/logo.png" alt=""></a></div>
+            <div class=" md:block hidden">
+                <ul class="flex justify-between gap-7">
+                    <li class="text-lg"><a href="">Home</a></li>
+                    <li class="text-lg"><a href="">Product</a></li>
+                    <li class="text-lg"><a href="">About us</a></li>
+                    <li class="text-lg"><a href="">Contact us</a></li>
+                </ul>
+            </div>
+            <div class="md:hidden block"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-7">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+              </svg>
+              </div>
+        </nav>
         <!-- Banner -->
          <div class="md:flex md:justify-between md:items-center md:pb-7 mb-3">
             <section>
